challenge metric added and some cleaning done

--- a/notebooks/1_introduction_data_handling.ipynb
+++ b/notebooks/1_introduction_data_handling.ipynb
@@ -666,7 +666,7 @@
     "- Train data is from the directories *G12EC, INCART, PTB_PTBXL* and *ChapmanShaoxing_Ningbo*\n",
     "- Test data is from the directory *CPSC_CPSC-Extra*.\n",
     "\n",
-    "The following attributes set before the `if-else` statement as follows:\n",
+    "The following attributes set **before the `if-else` statement** as follows:\n",
     "\n",
     "```\n",
     "stratified = True\n",
