--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -16,21 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "10c74753",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Parameters for the yaml files -------------\n",
     "# Training parameters\n",
-    "batch_size = 10\n",
+    "batch_size = 64\n",
     "num_workers = 0\n",
-    "epochs = 5\n",
+    "epochs = 50\n",
     "lr = 0.003\n",
     "weight_decay = 0.00001\n",
     "\n",
     "# Device configurations\n",
-    "device_count = 1\n",
+    "device_count = 2\n",
     "\n",
     "# -----------\n",
     "# Decision threshold for predictions\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b88b00d1",
    "metadata": {},
    "outputs": [],
@@ -98,13 +98,13 @@
     "# ------------------------------------------\n",
     "\n",
     "# From where to load the csv files of stratified split\n",
-    "csv_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'physionet_stratified_smoke')\n",
+    "csv_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'physionet_stratified')\n",
     "\n",
     "# Where to save the training yaml files\n",
-    "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_stratified_smoke')\n",
+    "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_stratified')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'predict_stratified_smoke')"
+    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'predict_stratified')"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "1c57b038",
    "metadata": {},
    "outputs": [
@@ -126,14 +126,50 @@
      "output_type": "stream",
      "text": [
       "test_split_1.csv\n",
+      "test_split_2.csv\n",
+      "test_split_3.csv\n",
+      "test_split_4.csv\n",
+      "test_split_5.csv\n",
       "train_split_1_1.csv\n",
       "train_split_1_2.csv\n",
       "train_split_1_3.csv\n",
       "train_split_1_4.csv\n",
+      "train_split_2_1.csv\n",
+      "train_split_2_2.csv\n",
+      "train_split_2_3.csv\n",
+      "train_split_2_4.csv\n",
+      "train_split_3_1.csv\n",
+      "train_split_3_2.csv\n",
+      "train_split_3_3.csv\n",
+      "train_split_3_4.csv\n",
+      "train_split_4_1.csv\n",
+      "train_split_4_2.csv\n",
+      "train_split_4_3.csv\n",
+      "train_split_4_4.csv\n",
+      "train_split_5_1.csv\n",
+      "train_split_5_2.csv\n",
+      "train_split_5_3.csv\n",
+      "train_split_5_4.csv\n",
       "val_split_1_1.csv\n",
       "val_split_1_2.csv\n",
       "val_split_1_3.csv\n",
-      "val_split_1_4.csv\n"
+      "val_split_1_4.csv\n",
+      "val_split_2_1.csv\n",
+      "val_split_2_2.csv\n",
+      "val_split_2_3.csv\n",
+      "val_split_2_4.csv\n",
+      "val_split_3_1.csv\n",
+      "val_split_3_2.csv\n",
+      "val_split_3_3.csv\n",
+      "val_split_3_4.csv\n",
+      "val_split_4_1.csv\n",
+      "val_split_4_2.csv\n",
+      "val_split_4_3.csv\n",
+      "val_split_4_4.csv\n",
+      "val_split_5_1.csv\n",
+      "val_split_5_2.csv\n",
+      "val_split_5_3.csv\n",
+      "val_split_5_4.csv\n"
      ]
     }
    ],
@@ -156,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b0dedbb0",
    "metadata": {
     "scrolled": false
@@ -171,14 +207,31 @@
       "('train_split_1_2.csv', 'val_split_1_2.csv')\n",
       "('train_split_1_3.csv', 'val_split_1_3.csv')\n",
       "('train_split_1_4.csv', 'val_split_1_4.csv')\n",
+      "('train_split_2_1.csv', 'val_split_2_1.csv')\n",
       "\n",
       "Training, validation and testing pairs\n",
       "['train_split_1_1.csv', 'val_split_1_1.csv', 'test_split_1.csv']\n",
       "['train_split_1_2.csv', 'val_split_1_2.csv', 'test_split_1.csv']\n",
       "['train_split_1_3.csv', 'val_split_1_3.csv', 'test_split_1.csv']\n",
       "['train_split_1_4.csv', 'val_split_1_4.csv', 'test_split_1.csv']\n",
+      "['train_split_2_1.csv', 'val_split_2_1.csv', 'test_split_2.csv']\n",
+      "['train_split_2_2.csv', 'val_split_2_2.csv', 'test_split_2.csv']\n",
+      "['train_split_2_3.csv', 'val_split_2_3.csv', 'test_split_2.csv']\n",
+      "['train_split_2_4.csv', 'val_split_2_4.csv', 'test_split_2.csv']\n",
+      "['train_split_3_1.csv', 'val_split_3_1.csv', 'test_split_3.csv']\n",
+      "['train_split_3_2.csv', 'val_split_3_2.csv', 'test_split_3.csv']\n",
+      "['train_split_3_3.csv', 'val_split_3_3.csv', 'test_split_3.csv']\n",
+      "['train_split_3_4.csv', 'val_split_3_4.csv', 'test_split_3.csv']\n",
+      "['train_split_4_1.csv', 'val_split_4_1.csv', 'test_split_4.csv']\n",
+      "['train_split_4_2.csv', 'val_split_4_2.csv', 'test_split_4.csv']\n",
+      "['train_split_4_3.csv', 'val_split_4_3.csv', 'test_split_4.csv']\n",
+      "['train_split_4_4.csv', 'val_split_4_4.csv', 'test_split_4.csv']\n",
+      "['train_split_5_1.csv', 'val_split_5_1.csv', 'test_split_5.csv']\n",
+      "['train_split_5_2.csv', 'val_split_5_2.csv', 'test_split_5.csv']\n",
+      "['train_split_5_3.csv', 'val_split_5_3.csv', 'test_split_5.csv']\n",
+      "['train_split_5_4.csv', 'val_split_5_4.csv', 'test_split_5.csv']\n",
       "\n",
-      "Total of 4 training, validation and testing sets\n"
+      "Total of 20 training, validation and testing sets\n"
      ]
     }
    ],
@@ -236,10 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "6c178529",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -261,6 +314,70 @@
       "Training, validation and testing sets are\n",
       "train_split_1_4 \t val_split_1_4 \t test_split_1\n",
       "Yaml file will be named as split_1_4.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_2_1 \t val_split_2_1 \t test_split_2\n",
+      "Yaml file will be named as split_2_1.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_2_2 \t val_split_2_2 \t test_split_2\n",
+      "Yaml file will be named as split_2_2.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_2_3 \t val_split_2_3 \t test_split_2\n",
+      "Yaml file will be named as split_2_3.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_2_4 \t val_split_2_4 \t test_split_2\n",
+      "Yaml file will be named as split_2_4.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_3_1 \t val_split_3_1 \t test_split_3\n",
+      "Yaml file will be named as split_3_1.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_3_2 \t val_split_3_2 \t test_split_3\n",
+      "Yaml file will be named as split_3_2.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_3_3 \t val_split_3_3 \t test_split_3\n",
+      "Yaml file will be named as split_3_3.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_3_4 \t val_split_3_4 \t test_split_3\n",
+      "Yaml file will be named as split_3_4.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_4_1 \t val_split_4_1 \t test_split_4\n",
+      "Yaml file will be named as split_4_1.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_4_2 \t val_split_4_2 \t test_split_4\n",
+      "Yaml file will be named as split_4_2.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_4_3 \t val_split_4_3 \t test_split_4\n",
+      "Yaml file will be named as split_4_3.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_4_4 \t val_split_4_4 \t test_split_4\n",
+      "Yaml file will be named as split_4_4.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_5_1 \t val_split_5_1 \t test_split_5\n",
+      "Yaml file will be named as split_5_1.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_5_2 \t val_split_5_2 \t test_split_5\n",
+      "Yaml file will be named as split_5_2.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_5_3 \t val_split_5_3 \t test_split_5\n",
+      "Yaml file will be named as split_5_3.yaml\n",
+      "\n",
+      "Training, validation and testing sets are\n",
+      "train_split_5_4 \t val_split_5_4 \t test_split_5\n",
+      "Yaml file will be named as split_5_4.yaml\n",
       "\n"
      ]
     }
