--- a/notebooks/3_introduction_training.ipynb
+++ b/notebooks/3_introduction_training.ipynb
@@ -51,7 +51,7 @@
     "CUDA_VISIBLE_DEVICES=0 python script.py\n",
     "```\n",
     "\n",
-    "Sure you can spesify the CUDA devices with an environment variable in the Python scripts as follows:\n",
+    "As an alternative, you can spesify the CUDA devices as an environment variable in the python scripts as follows:\n",
     "\n",
     "```\n",
     "import os\n",
@@ -64,7 +64,7 @@
    "id": "1bd2b8a5",
    "metadata": {},
    "source": [
-    "In the script `train_model.py`, consider checking the paths for csv files (`csv_root`) and data (`data_root`) to make sure they point to the right locations. The attribute csv_root is set to find the csv file of the training data, and data_root is set to find the data. Note that as they are concatenated with the `os.path.join` method, you may only need to change the last path component."
+    "The script for this phase is `train_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component."
    ]
   },
   {
@@ -107,6 +107,8 @@
    "id": "b44f4e79",
    "metadata": {},
    "source": [
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
+    "\n",
     "### One yaml file\n",
     "\n",
     "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` for some smoke testing. The csv files `train_split_1_1.csv` and `val_split_1_1.csv` have already been constructed with the script `create_data_split_csvs.py`. (More details about this in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb)) That said, we are training a model using the stratified split of the data. The first rows from both csvs are as follows\n",
@@ -133,14 +135,11 @@
     "...\n",
     "```\n",
     "\n",
-    "The paths in `train_model.py` should be set as below (note the last path component)\n",
+    "The path in `train_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
-    "csv_root = os.path.join('data', 'split_csvs', 'physionet_stratified_smoke')\n",
-    "data_root = os.path.join('data', 'physionet_preprocessed_smoke')\n",
+    "csv_root = os.path.join(os.getcwd(), 'data', 'split_csvs', 'physionet_stratified_smoke')\n",
     "```\n",
-    "\n",
-    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_dir` **attribute is set with the assumption that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
     "Now you should be ready to perform the training:\n",
     "\n",
@@ -199,14 +198,11 @@
     "\n",
     "All the files are constructed from the same stratified split where training data is from the databases G12EC, INCART, PTB_PTBXL, ChapmanShaoxing_Ningbo. \n",
     "\n",
-    "Again, the paths in `train_model.py` should still be set as below\n",
+    "Again, the path in `train_model.py` should still be set as below\n",
     "\n",
     "```\n",
-    "csv_root = os.path.join('data', 'split_csvs', 'physionet_stratified_smoke')\n",
-    "data_root = os.path.join('data', 'physionet_preprocessed_smoke')\n",
+    "csv_root = os.path.join(os.getcwd(), 'data', 'split_csvs', 'physionet_stratified_smoke')\n",
     "```\n",
-    "\n",
-    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_dir` **attribute is set with the assumption that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
     "Terminal command for training is now\n",
     "\n",
