--- a/notebooks/4_introductions_testing_evaluation.ipynb
+++ b/notebooks/4_introductions_testing_evaluation.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "<font color ='red'>**NOTE!**</font> The `device_count` attribute should be considered. It refers to the number of GPUs which are used in prediction, similarly as in the training phase.\n",
     "\n",
-    "The script for this phase is `test_model.py`. You should first check the paths `csv_root` and `data_root` that they point to the right locations in the `data` directory (and its subdirectories). The attribute `csv_root` is set to find the csv file of the testing data, and `data_root` is set to find the data. Note that as they are concatenated with the `os.path.join` method, you may only need to change the last path component.\n",
+    "The script for this phase is `test_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component.\n",
     "\n",
     "`model` will be searched from the `experiments` directory automatically so only the name of the file is nessessary.\n",
     "\n",
@@ -82,6 +82,8 @@
    "id": "7ba3594d",
    "metadata": {},
    "source": [
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
+    "\n",
     "### One yaml file\n",
     "\n",
     "The yaml file for smoke testing --- `predict_smoke.yaml` --- is available in `/configs/predicting/`. Make sure the model is trained first and is named as `train_smoke.pth`! Obviously, perform training explained in the notebook [Introduction for Training a Model](3_introductions_training.ipynb) first.\n",
@@ -102,14 +104,11 @@
     "\n",
     "so total of six files are considered as the testing data. All of them are from the CPSC and CPSC-Extra databases.\n",
     "\n",
-    "Let's then check the paths and the number of devices used in `test_model.py` to point the right locations. For testing, they are as follows\n",
+    "The path in `test_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
     "csv_root = os.path.join('data', 'split_csvs', 'physionet_stratified_smoke')\n",
-    "data_root = os.path.join('data', 'physionet_preprocessed_smoke')\n",
     "```\n",
-    "\n",
-    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_dir` **attribute is set with the assumption that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
     "Then you can just run the command to make the predictions with the trained model saved as `train_smoke.pth` as\n",
     "\n",
@@ -164,15 +163,11 @@
     "device_count: 1\n",
     "```\n",
     "\n",
-    "Let's then check the paths and the number of devices used in `test_model.py` to point the right locations. For testing, they are as follows\n",
+    "The path in `test_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
     "csv_root = os.path.join('data', 'split_csvs', 'physionet_stratified_smoke')\n",
-    "data_root = os.path.join('data', 'physionet_preprocessed_smoke')\n",
     "```\n",
-    "\n",
-    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_dir` **attribute is set with the assumption that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
-    "\n",
     "\n",
     "Terminal command for testing is now\n",
     "\n",
