--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -14,12 +14,12 @@
     "\n",
     "## <font color = green>Download Data</font>\n",
     "\n",
-    "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
+    "[Introductions for Data Handling](1_introduction_data_handling.ipynb)\n",
     "\n",
     "----\n",
     "\n",
     "## <font color = green>Preprocess Data</font>\n",
-    "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
+    "[Introductions for Data Handling](1_introduction_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -45,7 +45,7 @@
     "\n",
     "\n",
     "## <font color = green>Split Data Into CSV Files</font>\n",
-    "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
+    "[Introductions for Data Handling](1_introduction_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -71,7 +71,7 @@
     "---\n",
     "\n",
     "##  <font color = green>Train a Model</font>\n",
-    "[Introductions for Training a Model](3_introductions_training.ipynb)\n",
+    "[Introductions for Training a Model](3_introduction_training.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -97,7 +97,7 @@
     "\n",
     "## <font color = green>Test a Model</font>\n",
     "\n",
-    "[Introductions for the Prediction and Evaluation](4_introductions_prediction_evaluation.ipynb)\n",
+    "[Introductions for the Prediction and Evaluation](4_introduction_prediction_evaluation.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
