logits storing and updating notebooks

--- a/notebooks/1_introduction_data_handling.ipynb
+++ b/notebooks/1_introduction_data_handling.ipynb
@@ -222,7 +222,7 @@
     "\n",
     "# All tar.gz files (in the current working directory)\n",
     "curr_path = os.getcwd()\n",
-    "targz_files = [file for file in os.listdir(curr_path) if os.path.isfile(os.path.join(curr_path, file)) and file.endswith('tar.gz')]\n",
+    "targz_files = [file for file in os.listdir(curr_path) if os.path.isfile(os.path.join(curr_path, file)) and file.endswith('tar.gz') and file.startswith('WFDB')]\n",
     "\n",
     "# Let's sort the files\n",
     "targz_files = sorted(targz_files)\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "7f886269",
    "metadata": {},
    "outputs": [],
@@ -303,28 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d69e560b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting tar.gz file(s) ('WFDB_CPSC2018.tar.gz', 'WFDB_CPSC2018_2.tar.gz') to the CPSC_CPSC-Extra directory\n",
-      "- 13754 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/CPSC_CPSC-Extra\n",
-      "- 6906 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/CPSC_CPSC-Extra\n",
-      "Extracting tar.gz file(s) ('WFDB_StPetersburg.tar.gz',) to the INCART directory\n",
-      "- 148 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/INCART\n",
-      "Extracting tar.gz file(s) ('WFDB_PTB.tar.gz', 'WFDB_PTBXL.tar.gz') to the PTB_PTBXL directory\n",
-      "- 1032 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/PTB_PTBXL\n",
-      "- 43674 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/PTB_PTBXL\n",
-      "Extracting tar.gz file(s) ('WFDB_Ga.tar.gz',) to the G12EC directory\n",
-      "- 20688 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/G12EC\n",
-      "Extracting tar.gz file(s) ('WFDB_ChapmanShaoxing.tar.gz', 'WFDB_Ningbo.tar.gz') to the ChapmanShaoxing_Ningbo directory\n",
-      "- 20494 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/ChapmanShaoxing_Ningbo\n",
-      "- 69810 files extracted to /home/tuhlei/digital_health_tech_files/testing/12-lead-ecg-classifier/data/physionet_data/ChapmanShaoxing_Ningbo\n",
-      "Done!\n"
+     "ename": "NameError",
+     "evalue": "name 'tar_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m dir_names \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCPSC_CPSC-Extra\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mINCART\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPTB_PTBXL\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mG12EC\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChapmanShaoxing_Ningbo\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Extracting right files to right subdirectories\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m tar, directory \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[43mtar_split\u001b[49m, dir_names):\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExtracting tar.gz file(s) \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m to the \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m directory\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(tar, directory))\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m# Saving path for the specific files\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tar_split' is not defined"
      ]
     }
    ],
@@ -374,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f6cd287a",
    "metadata": {},
    "outputs": [
@@ -425,17 +416,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2edd6be1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tuhlei/digital_health_tech_files/git/12-lead-ecg-classifier/data/12-lead_ECG_AHA\n",
+      "- 25770 files extracted to /home/tuhlei/digital_health_tech_files/git/12-lead-ecg-classifier/data/12-lead_ECG_AHA\n"
+     ]
+    }
+   ],
    "source": [
     "## Other sources\n",
     "## -------------\n",
     "\n",
-    "# tar = 'example.tar.gz'\n",
-    "# save_path = os.path.join(abs_path.parent.absolute(), 'data', 'example')\n",
-    "# extract_files(tar, save_path)"
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "# Absolute path of this file\n",
+    "abs_path = Path(os.path.abspath(''))\n",
+    "\n",
+    "tar = '12-lead_ECG_records.tar.gz'\n",
+    "save_path = os.path.join(abs_path.parent.absolute(), 'data', '12-lead_ECG_AHA')\n",
+    "print(save_path)\n",
+    "extract_files(tar, save_path)"
    ]
   },
   {
