--- a/notebooks/4_introduction_testing_evaluation.ipynb
+++ b/notebooks/4_introduction_testing_evaluation.ipynb
@@ -34,9 +34,15 @@
     "\n",
     "<font color ='red'>**NOTE!**</font> The `device_count` attribute should be considered. It refers to the number of GPUs which are used in prediction, similarly as in the training phase.\n",
     "\n",
-    "The script for this phase is `test_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component.\n",
-    "\n",
-    "`model` will be searched from the `experiments` directory automatically so only the name of the file is nessessary.\n",
+    "The script for this phase is `test_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component. `model` will be searched from the `experiments` directory automatically so only the name of the file is nessessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeff5f78",
+   "metadata": {},
+   "source": [
+    "### Saving the results\n",
     "\n",
     "The predictions are saved as csv files with the following structure\n",
     "\n",
@@ -49,7 +55,11 @@
     "\n",
     "where the first row, `#Record ID`, refers to the file name from which the prediction is made, and the second to the class labels used in SNOMED CT codes, and the third row to the predicted label in binary form (1 - patient is predicted to have the diagnosis above, and 0 - the opposite), and the fourth row to the probability scores for each predicted label. \n",
     "\n",
-    "The script performs the evaluation automatically after the predictions are made. In the evaluation phase, `metrics.py` is used from `/src/modeling/` to compute the wanted metrics. The evaluation metrics will be saved in the same directory as the predictions and is in the form of a `pickle` file. ROC curves are also drawn as previously, and they are saved in a `png` format."
+    "The script automatically performs the evaluation automatically after the predictions are made. In the evaluation phase, `metrics.py` is used from `/src/modeling/` to compute the wanted metrics. The evaluation metrics will be saved in the same directory as the predictions as a `pickle` file. ROC curves are also drawn as previously, and they are saved in a `png` format. \n",
+    "\n",
+    "By default, evaluation history will contain micro/macro AUROC scores and micro/macro average precision scores as well as Physionet Challenge 2021 scoring metric (more information about this scoring metric can be found [here under **Scoring**](https://moody-challenge.physionet.org/2021/)). Also, decision threshold, labels and path for the test csv file are saved. These can be modified in the `predict_utils` script in `./src/modeling/` if wanted. There are a `history` dictionary located in the first lines of the `predict` function.\n",
+    "\n",
+    "If other metrics are wanted to be computed, you can compute them in the `metrics` scripts in `./src/modeling/`. There can be found the `cal_multilabel_metrics` function, in which the wanted metrics are computed and where you can add new functions. The predicted labels are also one-hot-encoded there, so this format of the predictions is available."
    ]
   },
   {
