--- a/notebooks/3_introduction_training.ipynb
+++ b/notebooks/3_introduction_training.ipynb
@@ -43,7 +43,11 @@
     "\n",
     "where `train_file` refers to a csv file which is used for training phase of epoch(s). It consists of the paths for ECG recordings, patients' gender and age, and labels used in the classification. `val_file` refers to a csv file which is used in the validation phase of epoch(s).\n",
     "\n",
+    "The script for this phase is `train_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component.\n",
+    "\n",
     "<font color ='red'>**NOTE!**</font> The `device_count` attribute in the yaml file should be considered. It refers to the number of GPUs which are used in training. This reflects to the `batch_size` attribute since the batch size should be divided by device count. Obviously, the result of the division should be a positive integer. \n",
+    "\n",
+    "### CUDA configurations (optional)\n",
     "\n",
     "If you want to spesify the CUDA devices you use in training, you can use the `CUDA_VISIBLE_DEVICES` variable. For example, if you want to run only the first GPU, you can write `CUDA_VISIBLE_DEVICES=0` as a first argument in a command line as follows:\n",
     "\n",
@@ -61,20 +65,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bd2b8a5",
-   "metadata": {},
-   "source": [
-    "The script for this phase is `train_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4a601f85",
    "metadata": {},
    "source": [
-    "Trained model(s), ROC curves of the training history will be saved in a subdirectory of the `experiments` directory. The ROC curves are drawn in the first, middle and last epochs. Each file or directory will be named after the used yaml file or the directory where the yaml files exist.\n",
+    "### Saving the results\n",
     "\n",
-    "Model will be saved in a `pth` format, ROC curves as `png` images and history as a `pickle` file. ROC curves will have a directory of their own."
+    "Trained model(s), training history as well as ROC curves and logits of the validation phase will be saved in a subdirectory of the `experiments` directory. ROC curves will have a directory of their own. They are drawn in the first, middle and last epochs; The rest will be saved after the last epoch. Each file and directory will be named after the used yaml file or the directory where the yaml files exist. \n",
+    "\n",
+    "Model will be saved in a `pth` format, ROC curves as `png` images, history as a `pickle` file, and logits as a `csv` file. In the logits csv file, the labels are used as columns and filenames as indexes so that each row contains the validation phase predictions made for the file which is named at the index. \n",
+    "\n",
+    "By default, training history will contain train_loss, micro/macro AUROC scores and micro/macro average precision scores of both training and validation phase as well as Physionet Challenge 2021 scoring metrics (more information about this scoring metric can be found [here under **Scoring**](https://moody-challenge.physionet.org/2021/)). Also, labels, number of epochs, batch size, learning rate, optimizer, criterion and paths for csv files used in training and validation are saved. These can be modified in the `train_utils` script in `./src/modeling/` if wanted. There are a `history` dictionary located in the first lines of the `train` function.\n",
+    "\n",
+    "If other metrics are wanted to be computed, you can compute them in the `metrics` scripts in `./src/modeling/`. There can be found the `cal_multilabel_metrics` function, in which the wanted metrics are computed and where you can add new functions. The predicted labels are also one-hot-encoded there, so this format of the predictions is available."
    ]
   },
   {
